# panaud

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
auditory-tests/: README.md  run.sh
crates/panaud-cli/: Cargo.toml
crates/panaud-cli/src/: app.rs  main.rs
crates/panaud-cli/src/commands/: channels.rs  concat.rs  convert.rs  fade.rs  info.rs  mod.rs  normalize.rs  pipeline_runner.rs  resample.rs  split.rs  trim.rs  volume.rs
crates/panaud-core/: Cargo.toml
crates/panaud-core/benches/: audio_bench.rs
crates/panaud-core/src/: error.rs  info.rs  lib.rs  pipeline.rs  schema.rs  time.rs  types.rs
crates/panaud-core/src/codec/: decode.rs  encode.rs  encode_flac.rs  encode_mp3.rs  encode_ogg.rs  mod.rs  probe.rs
crates/panaud-core/src/ops/: channels.rs  concat.rs  fade.rs  mod.rs  normalize.rs  resample.rs  split.rs  trim.rs  volume.rs
