[workspace]
members = ["crates/panaud-core", "crates/panaud-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tzengyuxio/panaud"
keywords = ["audio", "cli", "convert", "trim", "processing"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[workspace.dependencies]
# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
flacenc = "0.4"
mp3lame-encoder = "0.2"
vorbis_rs = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Internal crates
pan-common = "0.1.0"
panaud-core = { path = "crates/panaud-core", version = "0.2.0" }
