[package]
name = "panaud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for panaud audio processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
pan-common = { workspace = true }
symphonia = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
