[package]
name = "panaud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for panaud audio processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = ["flac-enc", "mp3-enc"]
flac-enc = ["dep:flacenc"]
mp3-enc = ["dep:mp3lame-encoder"]
ogg-enc = ["dep:vorbis_rs"]

[dependencies]
pan-common = { workspace = true }
symphonia = { workspace = true }
hound = { workspace = true }
flacenc = { workspace = true, optional = true }
mp3lame-encoder = { workspace = true, optional = true }
vorbis_rs = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
