[package]
name = "panaud-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for panaud audio processing"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = ["flac-enc", "mp3-enc", "resample"]
flac-enc = ["dep:flacenc"]
mp3-enc = ["dep:mp3lame-encoder"]
ogg-enc = ["dep:vorbis_rs"]
resample = ["dep:rubato"]

[dependencies]
pan-common = { workspace = true }
symphonia = { workspace = true }
hound = { workspace = true }
flacenc = { workspace = true, optional = true }
mp3lame-encoder = { workspace = true, optional = true }
vorbis_rs = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "audio_bench"
harness = false
